Figured out why the site.css file wasn't working and fixed spacing issues

--- a/BucketList/BucketList/Content/Site.css
+++ b/BucketList/BucketList/Content/Site.css
@@ -39,3 +39,7 @@ h2 {
     display: inline-block;
     float: none;
 }
+
+.body-content{
+    margin-top: 80px;
+}
